0.1.0:
- Created 'antum' mod
- Created 'antum_overrides' mod
- Created 'antum_spawneggs' mod
- Disabled shearing of sheep when punched (player must use shears to get wool)
- Disabled kpgmobs:sheep (use only sheep from creatures_mob_engine)