@@ -16,6 +16,7 @@ The game includes the mods from the default [minetest_game](https://github.com/m
     * [glass][antum_glass] ([MIT][lic.antum])
 	* [overrides][antum_overrides] ([MIT][lic.antum])
 * [awards][] ([LGPL][lic.awards]) -- version: [2.3.0-14-92c43d1 Git][ver.awards]
+* [bedrock2][] ([WTFPL][lic.bedrock2] -- version [1.2.0-0378b61 Git][ver.bedrock2]
 * buildings/
     * [christmas][] ([MIT](mods/buildings/christmas/LICENSE.txt))
     * [elevator][] ([WTFPL](mods/buildings/elevator/readme.txt))
@@ -191,6 +192,7 @@ The game includes the mods from the default [minetest_game](https://github.com/m
 [awards]: https://forum.minetest.net/viewtopic.php?t=4870
 [away]: https://forum.minetest.net/viewtopic.php?t=1211
 [bags]: http://cornernote.github.io/minetest-bags/
+[bedrock2]: https://forum.minetest.net/viewtopic.php?t=11271
 [biome_lib]: https://forum.minetest.net/viewtopic.php?f=11&t=12999
 [bookmarks_gui]: http://cornernote.github.io/minetest-bookmarks_gui/
 [campfire]: https://forum.minetest.net/viewtopic.php?t=10569
@@ -299,6 +301,7 @@ The game includes the mods from the default [minetest_game](https://github.com/m
 [lic.antum]: mods/antum/LICENSE.txt
 [lic.areas]: mods/protection/areas/LICENSE.txt
 [lic.awards]: mods/awards/LICENSE.txt
+[lic.bedrock2]: mods/bedrock2/COPYING
 [lic.character_creator]: mods/player_visuals/character_creator/LICENSE.md
 [lic.cme]: mods/mp_cme/LICENSE.txt
 [lic.coloredwood]: mods/wood/coloredwood/LICENSE
@@ -325,6 +328,7 @@ The game includes the mods from the default [minetest_game](https://github.com/m
 [ver.3d_armor]: https://github.com/stujones11/minetest-3d_armor/tree/456c84e
 [ver.areas]: https://github.com/ShadowNinja/areas/tree/67507c7
 [ver.awards]: https://github.com/minetest-mods/awards/tree/92c43d1
+[ver.bedrock2]: http://repo.or.cz/minetest_bedrock2.git/tree/0378b61
 [ver.character_creator]: https://github.com/Rui-Minetest/character_creator/tree/5e8fec2
 [ver.cme]: https://github.com/BlockMen/cme/tree/e3502a1
 [ver.coloredwood]: https://github.com/minetest-mods/coloredwood/tree/7b177f3
