@@ -1,0 +1,10 @@
+Bedrock mod.
+
+Version 1.2.0
+
+This mod adds an indestructible bedrock layer at the bottom of the world.
+
+
+This mod recognizes the following minetest.conf setting:
+
+* `bedrock2_y`: Sets the Y coordinate on which the bedrock layer will be created (default: -30912).
