@@ -1,0 +1,1 @@
+Adds an indestructable bedrock layer at the bottom of the world.
