@@ -1,0 +1,2 @@
+Bedrock
+Bedrock is a very hard block. It cannot be mined, altered, destroyed or moved by any means. It appears at the bottom of the world in a flat layer.
